--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,16 @@ body{
   background-color: #F8F9FA;
 }
 
+
+::-webkit-scrollbar {
+  width: .7rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 0.5em;
+}
